Fix missing borders and borked line-heights
This only affected lines that contained a line-feed, and nothing else. A
line containing other characters (including spaces or tabs) was rendered
correctly.

--- a/styles/dividers.less
+++ b/styles/dividers.less
@@ -3,12 +3,21 @@
 
 // Border-style form-feeds
 @{ff-border} @{ff-selector}{
-	&:not(@{ff-inline})::before{
-		content: "";
-		position: absolute;
-		width: 100%;
-		margin-top: ~"calc(1px + var(--form-feed-offset))";
-		border-top: 1px solid;
+	&:not(@{ff-inline}){
+		&::before{
+			content: "";
+			position: absolute;
+			width: 100%;
+			margin-top: ~"calc(1px + var(--form-feed-offset))";
+			border-top: 1px solid;
+		}
+		
+		&::after{
+			content: "\A0";
+			pointer-events: none;
+			display: inline-block;
+			width: 0;
+		}
 	}
 	
 	&@{ff-leading}::before{
